Prevent flickering of snippet on dragging
In chrome there was an odd flickering when animating the opacity. So I just removed that.

--- a/test/manual/css/livingdocs.css
+++ b/test/manual/css/livingdocs.css
@@ -46,16 +46,15 @@
 
 @-webkit-keyframes pulse {
   0% { -webkit-transform: scale(1); }
-  20% { -webkit-transform: scale(1.1); }
+  20% { -webkit-transform: scale(1.02); }
   100% { -webkit-transform: scale(1); }
 }
 
 @-webkit-keyframes pulse-dragged {
-  0% { -webkit-transform: scale(1); opacity: 1; }
+  0% {  -webkit-transform: scale(1); opacity: 1; }
   20% { -webkit-transform: scale(1.02); }
-  100% { -webkit-transform: scale(1) opacity(0.5); opacity: 0.3; }
+  100% { -webkit-transform: scale(1); opacity: 0.3; }
 }
-
 
 .doc-dragged-placeholder {
   outline: medium dashed rgba(255, 196, 13, 0.5);
@@ -63,8 +62,8 @@
 }
 
 .doc-dragged {
-  -webkit-animation: pulse-dragged 0.3s;
-  opacity: 0.3;
+  -webkit-animation: pulse 0.3s;
+  opacity: .4;
 }
 
 .doc-before-drop {
